<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>566</width>
    <height>300</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>566</width>
    <height>300</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>566</width>
    <height>300</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Rejestracja</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="email_label">
     <property name="text">
      <string>Email</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="reg_email_line"/>
   </item>
   <item>
    <widget class="QLabel" name="orgname_label">
     <property name="text">
      <string>Nazwa organizacji</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="reg_orgname_line"/>
   </item>
   <item>
    <widget class="QLabel" name="password_label">
     <property name="text">
      <string>Hasło</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QgsPasswordLineEdit" name="reg_pwd_line"/>
   </item>
   <item>
    <widget class="QLabel" name="password_hint_label">
     <property name="font">
      <font>
       <italic>true</italic>
      </font>
     </property>
     <property name="text">
      <string>Hasło musi składać się z minimum 8 znaków</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLabel" name="password_again_label">
     <property name="text">
      <string>Powtórz hasło</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QgsPasswordLineEdit" name="reg_pwd_again_line"/>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="register_button">
       <property name="minimumSize">
        <size>
         <width>120</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>120</width>
         <height>16777215</height>
        </size>
       </property>
       <property name="text">
        <string>Zarejestruj</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="cancel_button">
       <property name="minimumSize">
        <size>
         <width>120</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>120</width>
         <height>16777215</height>
        </size>
       </property>
       <property name="text">
        <string>Anuluj</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QgsPasswordLineEdit</class>
   <extends>QLineEdit</extends>
   <header>qgspasswordlineedit.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
